# kiri-polkit

./: .gitignore  README.md  meson.build
src/: Agent.vala  AuthPrompt.vala  Interfaces.vala  Utils.vala  meson.build
src/Widget/: AuthPrompt.vala  meson.build
